--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt">
 <head>
@@ -21,6 +22,7 @@
     "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client",
     "recharts": "https://esm.sh/recharts@^3.6.0",
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "@neondatabase/serverless": "https://esm.sh/@neondatabase/serverless@^0.10.4",
     "pdfjs-dist": "https://esm.sh/pdfjs-dist@4.10.38",
     "jszip": "https://esm.sh/jszip@^3.10.1",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
@@ -33,6 +35,5 @@
 </head>
 <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
